ast hacking for decorators

--- a/sized_file_read/README.ipynb
+++ b/sized_file_read/README.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "ff814701-d8f2-4e3b-be7f-0d84d7d4e1f2",
    "metadata": {
     "tags": []
@@ -32,6 +32,7 @@
     "import os\n",
     "import tempfile\n",
     "import subprocess\n",
+    "from typing import Optional\n",
     "\n",
     "cmd = ['python3', 'helper.py', '5']\n",
     "\n",
@@ -54,10 +55,15 @@
     "while p.poll() is None:\n",
     "    pass\n",
     "\n",
-    "inf = open(name, \"r\")\n",
-    "r = inf.read(10)\n",
-    "inf.close()\n",
-    "os.unlink(name)\n",
+    "\n",
+    "def size_limited_file_read(f: str, n: int = -1) -> Optional[str]:\n",
+    "    if not os.path.isfile(f):\n",
+    "        logging.error(\"File {0} does not exist\".format(f))\n",
+    "        return None\n",
+    "    return open(f, \"r\").read(n)\n",
+    "\n",
+    "\n",
+    "r = size_limited_file_read(name, 10)\n",
     "print(r)"
    ]
   },
